--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_bloc: ^9.1.1
   go_router: ^17.0.1
   google_fonts: ^6.3.3
+  permission_handler: ^12.0.1
+  path_provider: ^2.1.5
+  device_info_plus: ^12.3.0
+  photo_manager: ^3.8.3
 
 dev_dependencies:
   flutter_test:
